--- a/etl_presentation/load.html
+++ b/etl_presentation/load.html
@@ -8,11 +8,14 @@
     <meta name="author" content="Rodrigo Guarneros">
     <meta name="Project1" content="Gas Stations v.1.0">
     <title>Load</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/album/">
 
     <!-- Bootstrap core CSS -->
-<link href="/Assets/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="Assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
       .bd-placeholder-img {
@@ -31,7 +34,7 @@
       }
     </style>
     <!-- Custom styles for this template the heade-->
-    <link href="/album.css" rel="stylesheet">
+    <link href="album.css" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -47,7 +50,7 @@
   </div>
   <div class="navbar navbar-dark bg-dark shadow-sm">
     <div class="container d-flex justify-content-between">
-      <a href="/index.html" class="navbar-brand l-flex align-items-center">
+      <a href="index.html" class="navbar-brand l-flex align-items-center">
         <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-house-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" d="M8 3.293l6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
           <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
@@ -67,11 +70,11 @@
       <h1>Extract, Transform and Load (ETL)</h1>
       <p class="leadtext-muted">This project was developed by Beta Team</p>
       <p>
-        <a href="/index.html" class="btn btn-secondary my-3">Intro</a>
-        <a href="/extract.html" class="btn btn-secondary my-3">Extract</a>
-        <a href="/transform.html" class="btn btn-secondary my-3">Transform</a>
-        <a href="/load.html" class="btn btn-success my-3" >Load</a>
-        <a href="/conclusions.html" class="btn btn-secondary my-3" >Conclusions</a>
+        <a href="index.html" class="btn btn-secondary my-3">Intro</a>
+        <a href="extract.html" class="btn btn-secondary my-3">Extract</a>
+        <a href="transform.html" class="btn btn-secondary my-3">Transform</a>
+        <a href="load.html" class="btn btn-success my-3" >Load</a>
+        <a href="conclusions.html" class="btn btn-secondary my-3" >Conclusions</a>
       </p>
     </div>
     <strong class="text-author">Carlos Casio, Eduardo Ayala, Samuel Cerón,  y Rodrigo Guarneros</strong>
@@ -80,7 +83,7 @@
 <!-- Is responsive (using media queries). The nav must have similar behavior as the screenshots "Navigation Menu" section (notice the background color change). -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-      <a class="navbar-brand text-white" href="/index.html" >ETL</a>
+      <a class="navbar-brand text-white" href="index.html" >ETL</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
@@ -92,11 +95,11 @@
                       Main
                   </a>
                   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="/index.html">Intro</a>
-                      <a class="dropdown-item" href="/extract.html">Extract</a>
-                      <a class="dropdown-item" href="/transform.html">Transform</a>
-                      <a class="dropdown-item" href="/load.html">Load</a>
-                      <a class="dropdown-item" href="/conclusions.html">Conclusions</a>
+                      <a class="dropdown-item" href="index.html">Intro</a>
+                      <a class="dropdown-item" href="extract.html">Extract</a>
+                      <a class="dropdown-item" href="transform.html">Transform</a>
+                      <a class="dropdown-item" href="load.html">Load</a>
+                      <a class="dropdown-item" href="conclusions.html">Conclusions</a>
                    </div>
               </li>
            </ul>
@@ -115,12 +118,12 @@
                 <p>For this purpose, we create a database in PostgreSQL and create the schemas ad hoc to the tables we transform previously.</p>
                 <hr>
                 <div class="thumbnail">
-                    <img class="img-thumbnail float-left" src="/Resources/Load1.jpeg" width="150%" alt="Importing">
+                    <img class="img-thumbnail float-left" src="Resources/Load1.jpeg" width="150%" alt="Importing">
                 </div>
                 <p>Finally we import the data and confirm the successfull.</p>
                 <hr>
                 <div class="thumbnail">
-                    <img class="img-thumbnail float-left" src="/Resources/Load2.jpeg" width="150%" alt="Jounction Table">
+                    <img class="img-thumbnail float-left" src="Resources/Load2.jpeg" width="150%" alt="Jounction Table">
                 </div>
                 <br>
                 <hr>
