--- a/etl_presentation/index copy.html
+++ b/etl_presentation/index copy.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="Rodrigo Guarneros">
     <meta name="Project1" content="Gas Stations v.1.0">
-    <title>Transform</title>
+    <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
@@ -70,20 +70,20 @@
       <h1>Extract, Transform and Load (ETL)</h1>
       <p class="leadtext-muted">This project was developed by Beta Team</p>
       <p>
-        <a href="index.html" class="btn btn-secondary my-3">Intro</a>
-        <a href="extract.html" class="btn btn-success my-3">Extract</a>
+        <a href="index.html" class="btn btn-success my-3">Intro</a>
+        <a href="extract.html" class="btn btn-secondary my-3">Extract</a>
         <a href="transform.html" class="btn btn-secondary my-3">Transform</a>
         <a href="load.html" class="btn btn-secondary my-3" >Load</a>
         <a href="conclusions.html" class="btn btn-secondary my-3" >Conclusions</a>
       </p>
     </div>
-    <strong class="text-author">Carlos Casio, Eduardo Ayala, Samuel Cerón, y Rodrigo Guarneros</strong>
+    <strong class="text-author">Carlos Casio, Eduardo Ayala, Samuel Cerón y Rodrigo Guarneros</strong>
   </section>
 
 <!-- Is responsive (using media queries). The nav must have similar behavior as the screenshots "Navigation Menu" section (notice the background color change). -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-      <a class="navbar-brand text-white" href="index.html" >ETL</a>
+      <a class="navbar-brand text-white" href="Resources/DER_GamesDB.png" >ETL</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
       </button>
@@ -95,12 +95,12 @@
                       Main
                   </a>
                   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="index.html">Intro</a>
-                    <a class="dropdown-item" href="extract.html">Extract</a>
-                    <a class="dropdown-item" href="transform.html">Transform</a>
-                    <a class="dropdown-item" href="load.html">Load</a>
-                    <a class="dropdown-item" href="conclusions.html">Conclusions</a>
-                 </div>
+                      <a class="dropdown-item" href="index.html">Intro</a>
+                      <a class="dropdown-item" href="extract.html">Extract</a>
+                      <a class="dropdown-item" href="transform.html">Transform</a>
+                      <a class="dropdown-item" href="load.html">Load</a>
+                      <a class="dropdown-item" href="conclusions.html">Conclusions</a>
+                   </div>
               </li>
           </ul>
       </div>
@@ -109,15 +109,91 @@
 
   <div class="container content">    
     <div class="row">
-        <div class="col-md-20">
+        <div class="col-md-6">
             <div class="col-md-15">
               <br>
-                <h3>The code </h3>
+                <h3>Introduction </h3>
                 <hr>
                 <div class="thumbnail">
-                    <a href="transform.html"><img class="img-thumbnail float-left" src="/Resources/t1.jpg" width="150%" alt="Kaggle"></a>
-                </div> 
+                    <img class="img-thumbnail float-left" src="Resources/kaggle2.png" width="150%" alt="Kaggle">
+                </div>
+                <br>
+                <hr>
+                <p>Our source was <a href="https://www.kaggle.com/nikdavis/steam-store-games?select=steam.csv">Kaggle.com</a>, the public site that allows you to find publish data sets.</p> 
+                <p>We choose a Relational Database Model because we have structured data in csv files. </p>
+                <hr>
+                <p>If you want more info about Relational Database Model: <a href="https://store.steampowered.com/dlc/307290?l=spanish">click here</a>.</p>
+                </ul>            
             </div>
         </div>
-    </div>
+        <!--visualization adjustments-->
+        <div class="col-md-6">
+            <div class="col-md-13">
+                <br>
+                <h3>Original Structure</h3>
+                <hr>
+                <div class="thumbnail">
+                  <img class="img-thumbnail float-left" src="Resources/csvs.png" width="60%" alt="csvs">
+                </div>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <p>The original structure includes 6 tables with information regarding 27,033 video games, gathered around May 2019 from the Steam Store. </p> 
+                <p><a href="https://store.steampowered.com/dlc/307290?l=spanish">Steam is a video game digital distribution service</a> managed by Valve (an American videogame developer).</p>
+              </div>
+        </div>
+        <div class="col-md-16">
+          <div class="col-md-13">
+              <br>
+              <h3>Data Modeling</h3>
+              <hr>
+              <div class="thumbnail">
+                <img class="img-thumbnail float-left" src="Resources/DER_GamesDB.png" width="100%" alt="Load">
+              </div>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              <p>All the team considered as a fundamental initial step to make the Entity Relationship Diagram (ERD). The benefits we can see are:</p> 
+              <ul>
+              <li>We were able to understand better the database</li>
+              <li>Number of tables we need for our database (Entities) </li>
+              <li>Information such as property and facts you need to describe each table (Atributes)</li>
+              <li>How tables are linked togheter (Relationships)</li>
+              <hr>
+              <p>Source:<a href="https://www.cs.uregina.ca/Links/class-info/215/erd/"> Data Modeling and Entity Relationship Diagram (ERD)</a></p>
+            </ul>
+            </div>
+      </div>
+      </div>
 </div>
+</body>
+</html>
+
+<footer class="text-muted">
+  <div class="container">
+    <p class="float-right">
+      <a href="#">Back to top</a>
+    </p>
+  </div>
+</footer>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script>window.jQuery || document.write('<script src="../assets/js/vendor/jquery.slim.min.js"><\/script>')</script><script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+</html>
