Solving extract and transform routes

--- a/etl_presentation/extract.html
+++ b/etl_presentation/extract.html
@@ -149,7 +149,7 @@
                     <li>Consider a main table, and</li>
                     <li>Know dimensions, just before starting the <a href="Transform.html">Transformation</a> process.</li>
                 <div class="thumbnail">
-                    <a href="extract2.html"><img class="img-thumbnail float-left" src="/Resources/Extract1.jpg" width="210%" alt="Kaggle"></a>
+                    <a href="extract2.html"><img class="img-thumbnail float-left" src="Resources/Extract1.jpg" width="210%" alt="Kaggle"></a>
                 </div> 
                 </ul>
               </div>
