--- a/etl_presentation/transform.html
+++ b/etl_presentation/transform.html
@@ -121,7 +121,7 @@
                     <li>First, we eliminate unnecesary columns from the main DataFrame (Games)</li>
                     <li>Then, for the owners column we create a unique catalogue and replace values with ids</li>
                     <hr>
-                    <a href="transform2.html"><img class="img-thumbnail float-left" src="/Resources/t1.jpg" width="90%" alt="eliminate col"></a>
+                    <a href="transform2.html"><img class="img-thumbnail float-left" src="Resources/t1.jpg" width="90%" alt="eliminate col"></a>
                     <br>
                     <br>
 
@@ -130,7 +130,7 @@
                     <li>We applied the same criteria to the columns Publiser, categories and steampspy_tags</li>
                     <hr>
                     <div class="thumbnail">
-                        <a href="transform3.html"><img class="img-thumbnail float-left" src="/Resources/t2.jpg" width="90%" alt="Kaggle"></a>
+                        <a href="transform3.html"><img class="img-thumbnail float-left" src="Resources/t2.jpg" width="90%" alt="Kaggle"></a>
                     </div>
                 </ul>            
             </div>
@@ -147,7 +147,7 @@
                     <li>Third, for platform we saw there are no many categories for this column</li>
                 <hr>
             <div class="thumbnail">
-                        <a href="transform4.html"><img class="img-thumbnail float-left" src="/Resources/t4.jpg" width="90%" alt="Kaggle"></a>
+                        <a href="transform4.html"><img class="img-thumbnail float-left" src="Resources/t4.jpg" width="90%" alt="Kaggle"></a>
                     </div>
                 </ul>
                 <br>
@@ -161,7 +161,7 @@
                 <p>Games (Main DataFrame)</p>
                 <hr>
                 <div class="thumbnail">
-                            <a href="transform5.html"><img class="img-thumbnail float-left" src="/Resources/t5.jpg" width="90%" alt="Kaggle"></a>
+                            <a href="transform5.html"><img class="img-thumbnail float-left" src="Resources/t5.jpg" width="90%" alt="Kaggle"></a>
                         </div>
                 </div>
         </div>
