Deleted cells and tested the SQL connection with other PC to check everythin is ok

--- a/etl_presentation/index.html
+++ b/etl_presentation/index.html
@@ -8,7 +8,6 @@
     <meta name="author" content="Rodrigo Guarneros">
     <meta name="Project1" content="Gas Stations v.1.0">
     <title>Home</title>
-
     <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/album/">
 
     <!-- Bootstrap core CSS -->
@@ -93,7 +92,7 @@
                   </a>
                   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                       <a class="dropdown-item" href="/index.html">Intro</a>
-                      <a class="dropdown-item" href="/extract.html">Extract</a>
+                      <a class="dropdown-item" href="extract.html">Extract</a>
                       <a class="dropdown-item" href="/transform.html">Transform</a>
                       <a class="dropdown-item" href="/load.html">Load</a>
                       <a class="dropdown-item" href="/conclusions.html">Conclusions</a>
